# house-data

./: .env-template  README.md  keys.json  requirements.txt
.github/workflows/: datamate-python-package.yml  python-package.yml
datamate/: README.md  pyproject.toml
datamate/datamate/: __init__.py  config.py  logging.py  pandas.py  typing.py
datamate/tests/: conftest.py  test_config.py  test_logging.py  test_pandas.py  test_pandas_serialisation.py
linux/: add-ssh-key.md  check-disk.md  clear-jupyter.md  jupyter.md  log.md  mount-hdd.md  ssh.md  wake-on-ssh.md
notebooks/police-data/: Analysis.ipynb  Derived.ipynb  Raw.ipynb
notebooks/postcode-data/: Derived.ipynb  Raw.ipynb
notebooks/price-paid-data/: Analysis.ipynb  Derived.ipynb  Raw.ipynb
notebooks/school-performance-data/: Raw.ipynb
notebooks/uprn-lookup-data/: Derived.ipynb  Raw.ipynb
notes/: air-pollution-data.md  lsoa-data  noise-data.md  price-paid-data-link.md  school-data.md
raw/: PricePaidData.ipynb
