[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "datamate"
authors = [
    {name = "Josie Tolia"},
]
description = "Python package to help with data analysis"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache Lincence 2"}
dependencies = [
    "python-dotenv",
]
dynamic = ["version"]
