[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "datamate"
authors = [
    {name = "Josie"},
]
description = "Python package to help with data analysis"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
    "python-dotenv",
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]
dev = [
    "black",
    "flake8",
    "datamate[test]",
]
