[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "datamate"
authors = [
    {name = "Josie"},
]
description = "Python package to help with data analysis"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv==0.21.1",
    "pandas==1.5.3",
    "pyarrow==11.0.0"
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]
dev = [
    "black",
    "flake8",
    "datamate[test]",
]
